--- a/client/src/components/Detail.css
+++ b/client/src/components/Detail.css
@@ -17,6 +17,8 @@
     padding: 15px;
     margin: 30px;
     box-shadow: 0px 0px 20px 0px rgb(0, 0, 0);
+    text-shadow: 2px 2px 2px #0c0c0c3b;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow Bold', Arial, sans-serif ;
     
 }
 
