--- a/client/src/components/Card.css
+++ b/client/src/components/Card.css
@@ -11,14 +11,18 @@
     width: 8cm;
     background-color: rgba(176, 176, 176, 0.311);
     background-size: contain;
-    border-radius: 5px;
+    border-radius: 10px;
     border-color: black;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 5px;
     text-decoration: none;
     color:black;
     box-shadow: 0 8px 32px 0 rgba(28, 61, 133, 0.575);
+    text-shadow: 2px 2px 2px #0c0c0c33;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.Card h2{
+    margin:10px;
 }
 
 .Card:hover{
