--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -5,20 +5,31 @@
   align-items: center;
   justify-content: space-between;
   padding-inline: 100px;
+  text-decoration: none;
+}
+
+.navbarlink{
+  text-decoration: none;
+  color:white;
+  font-size: 15px;
+  font-weight: bold;
+  text-shadow: 5px 5px 5px #0c0c0c;
 }
 
 .title{
     display: flex;
     justify-content: flex-end;
-    font-size: 60px;
+    font-size: 50px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
     font-weight: bolder;
     margin: 0px;
     border-color: 3px black;
     color: #9ff4ff;
     text-shadow: 5px 5px 5px #0c0c0c;
-    
+    text-decoration: none;
+    padding: 0px;
 }
+
 
 .filtros{
     color: rgb(0, 0, 0);
@@ -29,6 +40,9 @@
     height:fit-content;
     width: 100%;
     font-size: 15px;
+    align-items: center;
+    text-shadow: 2px 2px 2px #0c0c0c54;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .select{
@@ -50,8 +64,6 @@
   -webkit-appearance: none;
   appearance: none;
   background-color: #fff;
-  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
-    linear-gradient(to bottom, #ffffff 0%,#f7f7f7 100%);
   background-repeat: no-repeat, repeat;
   background-position: right .7em top 50%, 0 0;
   background-size: .65em auto, 100%;
@@ -60,9 +72,11 @@
 .loading{
   display: flex;
   flex-direction: column;
-  margin-top: 100px;  
+  margin-top: 100px;
+  align-items: center;
   justify-content: center;
-  height: 60vh;
+  text-shadow: 2px 2px 2px #0c0c0c54;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .btnhome{
