--- a/client/src/components/Paginated.css
+++ b/client/src/components/Paginated.css
@@ -1,11 +1,48 @@
-.paginated{
-    gap: 30px;
-    color: rgb(7, 202, 7);
-    font-size: 1rem;
+.center{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 8px 16px;
-    margin-bottom: 2rem;
-    
 }
+
+.center ul{
+    padding:0px
+}
+.btnPaginate {
+    font-size: 17px;
+    height: fit-content;
+    width: fit-content;
+    margin: 5px;
+    border: 2px solid #000000;
+    border-radius: 500px;
+    background-color: #ffffff1a;
+    color: #000;
+    box-shadow: 1px 1px 2px rgb(0, 0, 0);
+    align-items: center;
+    justify-content: center;
+    text-shadow: 2px 2px 2px #0c0c0c33;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.current {
+    height: fit-content;
+    width: fit-content;
+    font-size: 17px;
+    margin: 5px;
+    border: 2px solid #67e4f4;
+    border-radius: 500px;
+    box-shadow: 1px 1px 2px rgb(0, 0, 0);
+    background-color: #000;
+    color: #03dcf8;
+    align-items: center;
+    justify-content: center;
+    text-shadow: 2px 2px 2px #0c0c0c33;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.btnPaginate:hover{
+    border-color: 2px solid #666666;
+    background-color: #03dcf8;
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+}
+  
