--- a/client/src/components/Form.css
+++ b/client/src/components/Form.css
@@ -1,25 +1,33 @@
 .cajaFormulaio {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
-    padding: 10px;
-    margin: 0px;
-    max-width: 100%;
-    max-height: 80%;
+    justify-content: center;
     background-color: rgba(0, 0, 0, 0.637);
+    color: #d3d4d5;
+    font-size: 20px;
 }
 
-.cajaTituloHuno {
+.Titulo {
     border-radius: 5px;
     justify-content: center;
     color: rgb(255, 255, 255);
-    font-size: 40px;
+    font-size: 30px;
     margin: 1px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.cajaDatos {
+.inputs{
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: start;
+}
 
+.cajaDatos {
     display: flex;
     height: 500px;
     justify-content: space-between;
@@ -28,7 +36,7 @@
 
 .cajaIngrDatosLabelEInput {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: inherit;
     justify-content: center;
     align-items: center;
