--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -1,16 +1,18 @@
 .navbar{
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   background-color: rgb(49, 49, 49);
   align-items: center;
   justify-content: space-between;
-  padding-inline: 100px;
   text-decoration: none;
-  max-width: 100%;
+  padding-inline: 40px;
 }
 
 .navbarlink{
   text-decoration: none;
+  flex-wrap: wrap;
+  flex-direction: column;
   color:white;
   font-size: 15px;
   font-weight: bold;
@@ -33,15 +35,15 @@
 
 
 .filtros{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
     color: rgb(0, 0, 0);
     background-color: #9ce0ff87;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    height:fit-content;
-    width: 100%;
-    font-size: 15px;
-    align-items: center;
+    font-size: 17px;
     text-shadow: 2px 2px 2px #0c0c0c54;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
@@ -52,12 +54,11 @@
   font-family: 'Verdana', sans-serif;
   font-weight: 400;
   color: #444;
-  line-height: 1.3;
-  width: 200px;
+  text-align: center;
+  width: 300px;
   padding: 2px;
-  max-width: 100%; 
   box-sizing: border-box;
- margin: 20px auto;
+  margin: 20px auto;
   border: 1px solid #aaa;
   box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
   border-radius: .3em;
@@ -81,16 +82,15 @@
 }
 
 .btnhome{
-    width:100px;
-    height:22px;
     background: #fafaf9;
     border-color: rgb(94, 94, 94);
-    border-radius: 30px;
+    border-radius: 10px;
     margin: 10px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
     font-size: 15px;
     text-decoration: none;
     text-align: center;
+    padding: 5px;
 
 }
 
