--- a/client/src/components/Form.css
+++ b/client/src/components/Form.css
@@ -1,20 +1,19 @@
 .cajaFormulaio {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(0, 0, 0, 0.637);
-    color: #d3d4d5;
-    font-size: 20px;
+    max-width: 460px;
+    border-radius: 10px;
+    padding: 40px 40px 40px 40px;
+    margin: 0 auto;
+    box-shadow: 0px 4px 22px 0px #0000001A;
+    background-color:rgba(255, 251, 251, 0.353);
+    border-radius: 20px;
+    color: #436565;
+    border: 1px solid #ffffff;
 }
 
 .Titulo {
-    border-radius: 5px;
-    justify-content: center;
-    color: rgb(255, 255, 255);
-    font-size: 30px;
-    margin: 1px;
+    color: #37e5f1;
+    text-shadow: 2px 2px 1px #7c7c7c;
+    font-size: 35px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
