--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("./Imagen/73249.jpg");
+  background-image: url("https://i.pinimg.com/originals/c8/21/e6/c821e6f6a409765d5b593ec84eb06cc8.jpg");
   background-size:cover;
   background-attachment: fixed;
 }
